--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0"
   },
