--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-maps": "^1.8.0",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "^3.5.4",
