--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
