--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-ble-plx": "^3.1.2-rc.0",
     "react-native-calendars": "^1.1302.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-maps": "^1.8.0",
     "react-native-modalize": "^2.1.1",
