--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,16 @@ buildscript {
         compileSdkVersion = 33
         targetSdkVersion = 33
         ndkVersion = "23.1.7779620"
+        supportLibVersion = "28.0.0"
+        googlePlayServicesVersion = "12+"
+        if (System.properties['os.arch'] == "aarch64") {
+            // For M1 Users we need to use the NDK 24 which added support for aarch64
+            ndkVersion = "24.0.8215888"
+        } else {
+            // Otherwise we default to the side-by-side NDK version from AGP.
+            ndkVersion = "21.4.7075529"
+        }
+
     }
     repositories {
         google()
@@ -22,6 +32,12 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        maven {
+// All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+url "$rootDir/../node_modules/react-native/android"
+}
     }
 }
 
