--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.6.1",
@@ -31,6 +32,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-maps": "^1.8.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "^3.5.4",
