--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.10.6",
+    "react-native-permissions": "^3.10.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
